--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "react-dom": "17.0.1"
   },
   "devDependencies": {
+    "@next/plugin-featurepeek": "featurepeek/next-plugin-featurepeek",
     "@testing-library/dom": "^7.28.1",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "babel-jest": "^26.6.3",
     "jest": "^26.6.3"
   },
-
   "jest": {
     "testPathIgnorePatterns": [
       "<rootDir>/.next/",
@@ -33,5 +33,5 @@
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
       "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
     }
-}
+  }
 }
