--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
     "next": "10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1"
@@ -20,7 +21,6 @@
     "babel-jest": "^26.6.3",
     "jest": "^26.6.3"
   },
-
   "jest": {
     "testPathIgnorePatterns": [
       "<rootDir>/.next/",
@@ -33,5 +33,5 @@
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
       "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
     }
-}
+  }
 }
