--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@material-ui/core": "^4.11.2",
     "mongodb": "^3.6.3",
     "next": "10.0.3",
+    "next-auth": "^3.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
@@ -21,6 +22,9 @@
     "@testing-library/react": "^11.2.2",
     "babel-jest": "^26.6.3",
     "jest": "^26.6.3"
+  },
+  "resolutions": {
+    "typeorm": "0.2.28"
   },
   "jest": {
     "testPathIgnorePatterns": [
