--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "10.0.3",
     "next-auth": "^3.1.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "uniqid": "^5.2.0"
   },
   "devDependencies": {
     "@testing-library/dom": "^7.28.1",
