--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "react-dom": "17.0.1",
     "uniqid": "^5.2.0"
   },
+  "peerOptionalDependencies": {
+    "mongodb": "^3.6.3"
+  },
   "devDependencies": {
     "@testing-library/dom": "^7.28.1",
     "@testing-library/jest-dom": "^5.11.6",
