--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prop-types": "^15.7.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "twilio": "^3.54.0",
     "uniqid": "^5.2.0"
   },
   "peerOptionalDependencies": {
