--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@sendgrid/mail": "^7.4.0",
     "mongodb": "^3.6.3",
     "next": "10.0.3",
     "next-auth": "^3.1.0",
